# formula-finder

./: Makefile  README.md  pyproject.toml
formula_finder/: __init__.py  algo_tree_helpers.py  binary_tree.py  common_formulas.py  generation.py  genetic_algo.py  genetic_helpers.py  output.py  simplify.py  validation.py  variables.py
notebooks/: Binary Trees.ipynb  Curve Fitting.ipynb  Getting Started.ipynb
tests/: test_formula_finder.py  test_variables.py
